--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ admin.age=18
 
 user.username=dev-admin
 user.password=dev-pwd
+
+msg.enabled=true
+msg.url=127.0.0.1
+msg.accessKeyId=10001
+msg.accessKeySecret=afelwjfwfwef
