--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ msg.enabled=true
 msg.url=127.0.0.1
 msg.accessKeyId=10001
 msg.accessKeySecret=afelwjfwfwef
+
+logging.level.com=debug
+logging.level.root=debug
