--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -18,9 +19,10 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <modules>
-        <module>spring-boot-starter-msg</module>
-    </modules>
+<!--    <modules>-->
+<!--        <module>spring-boot-starter-msg</module>-->
+<!--    </modules>-->
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -77,6 +79,8 @@
             <artifactId>spring-boot-starter-msg</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+
     </dependencies>
 
     <build>
