--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
+<!--    <packaging>pom</packaging>-->
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -18,9 +18,10 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
+    <packaging>jar</packaging>
 
     <modules>
-        <module>spring-boot-starter-msg</module>
+<!--        <module>spring-boot-starter-msg</module>-->
     </modules>
 
     <dependencies>
