--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,19 @@
         </dependency>
 
 
+<!--        Test-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.66</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
