--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ msg.accessKeySecret=afelwjfwfwef
 
 logging.level.com=debug
 logging.level.root=debug
+
+
+#actuator
+management.endpoints.web.exposure.include=*
