--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,16 @@
             <version>1.2.66</version>
         </dependency>
 
+<!--        Actuator-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+        </dependency>
+
 
     </dependencies>
 
