--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,13 @@ logging.level.root=debug
 
 
 #actuator
+#启用 shutdown
+management.endpoint.shutdown.enabled=true
+#全部禁用
+management.endpoints.enabled-by-default=false
+#启用info
+management.endpoint.info.enabled=true
+
+
+#actuator
 management.endpoints.web.exposure.include=*
