--- a/docker/ipass/V013/config/install.conf
+++ b/docker/ipass/V013/config/install.conf
@@ -28,17 +28,17 @@ ipaas_redis_password=mlkj_2931j
 
 # linker-boot服务配置
 ## xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
-ipaas_xxl_job_admin_addresses=http://172.16.0.226:7006/xxl-job-admin
+ipaas_xxl_job_admin_addresses=http://172.18.0.12:7006/xxl-job-admin
 
 # platform-linker服务配置
-## linker-boot address
-ipaas_linker_address=http://172.16.0.226:7004
+## linker 地址
+ipaas_linker_host=http://172.18.0.7:7004
 
 # zeebe-monitor服务配置
 ## es 地址
-ipaas_es_host=http://172.16.0.226:9200
+ipaas_es_host=http://172.18.0.2:9200
 ## zeebe 地址
-ipaas_zeebe_client_broker=http://172.16.0.226:26500
+ipaas_zeebe_client_broker=172.18.0.9:26500
 ## linker 地址
-ipaas_linker_host=http://172.16.0.226:7004
+ipaas_linker_host=http://172.18.0.7:7004
 
