Docker nginx nuxt

--- a/docker/ipass/platform-web/nuxt/Dockerfile
+++ b/docker/ipass/platform-web/nuxt/Dockerfile
@@ -23,4 +23,6 @@ COPY .ci/dev/nginx.conf  /usr/local/nginx/conf/nginx.conf
 ADD .ci/dev/start.sh /platform-web/dist/start.sh
 RUN dos2unix /platform-web/dist/start.sh
 RUN chmod +x /platform-web/dist/start.sh
+
+#Docker容器内运行多进程问题
 CMD sh /platform-web/dist/start.sh
